add github actions (#539)
Add yml file and bash script

1

Signed-off-by: privetkometa <privetkometa@gmail.com>

2

Signed-off-by: privetkometa <privetkometa@gmail.com>

3

Signed-off-by: privetkometa <privetkometa@gmail.com>

4

Signed-off-by: privetkometa <privetkometa@gmail.com>

5

Signed-off-by: privetkometa <privetkometa@gmail.com>

6

Signed-off-by: privetkometa <privetkometa@gmail.com>

22.6.1

7

Signed-off-by: privetkometa <privetkometa@gmail.com>

22.6.2

8

Signed-off-by: privetkometa <privetkometa@gmail.com>

22.6.3

9

Signed-off-by: privetkometa <privetkometa@gmail.com>

22.6.4

10

Signed-off-by: privetkometa <privetkometa@gmail.com>

22.6.5

11

Signed-off-by: privetkometa <privetkometa@gmail.com>

22.6.6

12

Signed-off-by: privetkometa <privetkometa@gmail.com>

22.6.7

13

Signed-off-by: privetkometa <privetkometa@gmail.com>

14

Signed-off-by: privetkometa <privetkometa@gmail.com>

15

Signed-off-by: privetkometa <privetkometa@gmail.com>

22.6.8

--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "@kupibilet/ui",
-  "version": "22.6.0",
+  "version": "22.6.8",
   "description": "UI kit for kupibilet web app",
+  "publishConfig": {
+    "kupibilet-dev:registry": "https://registry.npmjs.org"
+  },
   "scripts": {
     "lint": "yarn lint:js && yarn lint:css",
     "prestart": "scripts/check-engines.js",
