--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,5 +1,8 @@
 name: CI
-on:
+
+on: 
+  release:
+    types: [published]
   pull_request:
 
 env:
@@ -9,7 +12,9 @@ env:
   TRAVIS_COMMIT: ${{ github.sha }}
 
 jobs:
-  build:
+  build-preversion:
+    name: Build and publish preversion
+    if: github.head_ref
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -23,4 +28,18 @@ jobs:
       - name: Run script file
         run: ./.github/scripts/build-prevesion.sh
         shell: bash
-    
+  deploy:
+    name: Publish new version to NPM, deploy story-book
+    with:
+      branch: add-deploy-and-publish-to-ci
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 2
+      - uses: actions/setup-node@v2
+        with: 
+          cache: 'yarn'
+          registry-url: 'https://registry.npmjs.org'
+      - run: yarn --frozen-lockfile
+      - run: yarn publish
