--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Publish new version to NPM, deploy story-book
 on: 
   push:
     branches: 
-      - add-deploy-and-publish-to-ci
+      - master
     tags:
       - '*'
 
