--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "@kupibilet/ui",
   "version": "22.6.4",
   "description": "UI kit for kupibilet web app",
+  "publishConfig": {
+    "kupibilet-dev:registry": "https://registry.npmjs.org"
+  },
   "scripts": {
     "lint": "yarn lint:js && yarn lint:css",
     "prestart": "scripts/check-engines.js",
