--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,15 +1,17 @@
-name: CI
-on:
-  pull_request:
+name: Publish new version to NPM, deploy story-book
+
+on: 
+  push:
+    tags:
+      - '*'
 
 env:
   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
   GITHUB_TOKEN: ${{ github.token }}
-  TRAVIS_PULL_REQUEST_BRANCH: ${{ github.head_ref }} 
-  TRAVIS_COMMIT: ${{ github.sha }}
 
 jobs:
-  build:
+  deploy:
+    name: Publish new version to NPM, deploy story-book
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -20,7 +22,7 @@ jobs:
           cache: 'yarn'
           registry-url: 'https://registry.npmjs.org'
       - run: yarn --frozen-lockfile
-      - name: Run script file
-        run: ./.github/scripts/build-prevesion.sh
+      - run: |
+          echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > .npmrc
         shell: bash
-    
+      - run: npm publish --access public
