replace WithMedia2021 to queries2021 in Typography (#543)
* change storybook font to brand new Suisse Intl

* change colors to new palette

* add colors from design-tokens

* increase color card width

* add stories for disabled Input

* use new colors for Input component

* add stories for disabled RadioGroup

* update colors of Collapse component

* add colors for links

* use new colors for Link component

* use new colors for FormItem

* paint buttons into new colors

* add help button variant

* use new border radiuses

* paint Radio buttons into new colors

* add disabled checkbox story

* use small / medium / large border radiuses

* paint checkbox into new colors

* change default Icon fill to colorTextPrimary

* update tooltip colors

* paint tabs into new colors

* paint Popover into new colors

* paint Toggler to new colors

* paint Slider into new colors

* paint NavBar into new colors

* update colors of Dropdown

* paint Modal to new colors

* remove UppercaseExtraSmall from Typography

* fix font-weight for font in storybook

* update font-weight in UI components

* add font-weight: 600 to all headers

* remove letter spacing from titiles

* remove UppercaseExtraSmall from UI kit

* add TitleHero component

* use color colorTextPrimary in all headers

* change header font-size and line-height as for new redesign

* add TextAccent to UI kit

* change Text and TextLarge as for new redesign

* fix font-size

* update TextSmall and TextCaption UI

* fix TextCation to TextCaption

* update border colors

* update colors

* update box shadows

* update margin in modal footer

* add colorBgPrimaryHover color

* update select item colors

* change slider colors

* Revert "use color colorTextPrimary in all headers"

This reverts commit 7a48b2a3912323a22c6b4782a7e0fa2d42d30ba6.

* remove text color from typography

* update input border radius

* update icons

--- a/style-dictionary/tokens/components/tagLabel.json5
+++ b/style-dictionary/tokens/components/tagLabel.json5
@@ -29,7 +29,7 @@
                 "size": {
                     "borderRadius": {
                         "default": {
-                            "value": "{size.borderRadius.medium.default.value}"
+                            "value": "{size.borderRadius.small.default.value}"
                         }
                     },
                     "padding": {
@@ -75,7 +75,7 @@
                 "size": {
                     "borderRadius": {
                         "default": {
-                            "value": "{size.borderRadius.medium.default.value}"
+                            "value": "{size.borderRadius.small.default.value}"
                         }
                     },
                     "padding": {
@@ -121,7 +121,7 @@
                 "size": {
                     "borderRadius": {
                         "default": {
-                            "value": "{size.borderRadius.medium.default.value}"
+                            "value": "{size.borderRadius.small.default.value}"
                         }
                     },
                     "padding": {
@@ -167,7 +167,7 @@
                 "size": {
                     "borderRadius": {
                         "default": {
-                            "value": "{size.borderRadius.medium.default.value}"
+                            "value": "{size.borderRadius.small.default.value}"
                         }
                     },
                     "padding": {
