SITE-3646/Added new tokens for tag

--- a/style-dictionary/tokens/base/color.json5
+++ b/style-dictionary/tokens/base/color.json5
@@ -277,6 +277,11 @@
                 "normal":{
                     "value": "rgba(222, 53, 11, 1)"
                 }
+            },
+            "transparent":{
+                "normal":{
+                    "value": "rgba(0, 0, 0, 0)"
+                }
             }
         },
         "overlay": {
