--- a/style-dictionary/tokens/base/colorDark.json5
+++ b/style-dictionary/tokens/base/colorDark.json5
@@ -288,6 +288,11 @@
                 "normal":{
                     "value": "rgba(245, 51, 51, 1)"
                 }
+            },
+            "transparent":{
+                "normal":{
+                    "value": "rgba(0, 0, 0, 0)"
+                }
             }
         },
         "overlay": {
