--- a/style-dictionary/tokens/components/input.json5
+++ b/style-dictionary/tokens/components/input.json5
@@ -97,7 +97,8 @@
                         },
                         "error":{
                             "value": "{color.border.danger.normal.value}"
-                        }
+                        },
+                        "dusable": "{color.border.transparent.normal.value}}"
                     }
                 },
                 "typography": {
