--- a/style-dictionary/tokens/base/colorDark.json5
+++ b/style-dictionary/tokens/base/colorDark.json5
@@ -3,175 +3,163 @@
         "bg": {
             "layout": {
                 "default":{
-                    "value": "rgba(16, 16, 20, 1)"
+                    "value": "rgba(250, 250, 251, 1)"
                 }
             },
             "primary":{
                 "normal": {
-                    "value":"rgba(33, 33, 38, 1)"
+                    "value":"rgba(255, 255, 255, 1)"
                 },
                 "hover": {
-                    "value":"rgba(46, 46, 51, 1)"
+                    "value":"rgba(246, 247, 248, 1)"
                 },
                 "active": {
-                    "value":"rgba(46, 46, 51, 1)"
+                    "value":"rgba(246, 247, 248, 1)"
                 },
                 "disable":{
-                    "value":"rgba(58, 58, 65, 1)"
+                    "value":"rgba(238, 239, 242, 1)"
                 }
-            },
+            }, 
             "secondary": {
                 "normal":{
-                    "value": "rgba(58, 58, 65, 1)"
+                    "value": "rgba(238, 239, 242, 1)"
                 },
                 "hover":{
-                    "value": "rgba(70, 71, 78, 1)"
+                    "value": "rgba(232, 233, 237, 1)"
                 },
                 "active":{
-                    "value": "rgba(81, 82, 90, 1)"
+                    "value": "rgba(208, 209, 215, 1)"
                 },
                 "disable":{
-                    "value":"rgba(58, 58, 65, 1)"
+                    "value":"rgba(238, 239, 242, 1)"
                 }
             },
             "accent":{
                 "normal": {
-                    "value":"rgba(228, 92, 82, 1)"
+                    "value":"rgba(15, 153, 245, 1)"
                 },
                 "hover": {
-                    "value":"rgba(215, 64, 67, 1)"
+                    "value":"rgba(0, 138, 230, 1)"
                 },
                 "active": {
-                    "value":"rgba(179, 44, 58, 1)"
+                    "value":"rgba(0, 122, 204, 1)"
                 },
                 "disable":{
-                    "value":"rgba(58, 58, 65, 1)"
+                    "value":"rgba(238, 239, 242, 1)"
                 }
             },
             "help": {
                 "normal":{
-                    "value": "rgba(120, 83, 213, 1)"
+                    "value": "rgba(255, 144, 0, 1)"
                 },
                 "hover":{
-                    "value": "rgba(108, 69, 219, 1)"
+                    "value": "rgba(255, 125, 3, 1)"
                 },
                 "active":{
-                    "value": "rgba(78, 47, 183, 1)"
+                    "value": "rgba(252, 97, 0, 1)"
                 },
                 "disable":{
-                    "value":"rgba(58, 58, 65, 1)"
+                    "value":"rgba(238, 239, 242, 1)"
                 }
             },
             "contrast": {
                 "normal":{
-                    "value": "rgba(250, 250, 251, 1)"
+                    "value": "rgba(33, 33, 38, 1)"
                 },
                 "hover":{
-                    "value": "rgba(245, 245, 247, 1)"
+                    "value": "rgba(58, 58, 65, 1)"
                 },
                 "active":{
-                    "value": "rgba(232, 233, 237, 1)"
+                    "value": "rgba(16, 16, 20, 1)"
                 },
                 "disable":{
-                    "value":"rgba(58, 58, 65, 1)"
+                    "value":"rgba(238, 239, 242, 1)"
                 }
             },
             "statusDefault": {
                 "normal":{
-                    "value":"rgba(46, 46, 51, 1)"
-                },
-                "hover":{
-                    "value":"rgba(46, 46, 51, 1)"
-                },
-                "active":{
-                    "value":"rgba(46, 46, 51, 1)"
+                    "value":"rgba(245, 245, 247, 1)"
                 }
             },
             "statusPrimary": {
                 "normal":{
-                    "value":"rgba(93, 51, 52, 1)"
+                    "value":"rgba(235, 243, 255, 1)"
                 },
                 "hover":{
-                    "value":"rgba(86, 47, 48, 1)"
+                    "value":"rgba(214, 231, 255, 1)"
                 },
                 "active":{
-                    "value":"rgba(79, 43, 44, 1)"
+                    "value":"rgba(204, 224, 255, 1)"
                 }
             },
             "statusInfo": {
                 "normal":{
-                    "value":"rgba(0, 27, 115, 1)"
+                    "value":"rgba(235, 243, 255, 1)"
                 },
                 "hover":{
-                    "value":"rgba(0, 27, 115, 1)"
+                    "value":"rgba(214, 231, 255, 1)"
                 },
                 "active":{
-                    "value":"rgba(0, 21, 92, 1)"
+                    "value":"rgba(204, 224, 255, 1)"
                 }
             },
             "statusDanger": {
                 "normal":{
-                    "value": "rgba(87, 10, 17, 1)"
+                    "value": "rgba(252, 237, 232, 1)"
                 },
                 "hover":{
-                    "value":"rgba(78, 9, 15, 1)"
+                    "value":"rgba(255, 221, 219, 1)"
                 },
                 "active":{
-                    "value":"rgba(69, 8, 14, 1)"
+                    "value":"rgba(255, 212, 209, 1)"
                 }
             },
             "statusWarning": {
                 "normal":{
-                    "value": "rgba(82, 50, 3, 1)"
+                    "value": "rgba(255, 246, 235, 1)"
                 },
                 "hover":{
-                    "value":"rgba(73, 45, 3, 1)"
+                    "value":"rgba(255, 236, 214, 1)"
                 },
                 "active":{
-                    "value":"rgba(64, 39, 3, 1)"
+                    "value":"rgba(255, 232, 204, 1)"
                 }
             },
             "statusHelp": {
                 "normal":{
-                    "value": "rgba(35, 18, 122, 1)"
+                    "value":"rgba(235, 243, 255, 1)"
                 },
                 "hover":{
-                    "value":"rgba(32, 16, 111, 1)"
+                    "value":"rgba(214, 231, 255, 1)"
                 },
                 "active":{
-                    "value":"rgba(29, 15, 102, 1)"
+                    "value":"rgba(204, 224, 255, 1)"
                 }
             },
             "statusSuccess": {
                 "normal":{
-                    "value": "rgba(48, 79, 2, 1)"
-                },
-                "hover":{
-                    "value":"rgba(42, 69, 2, 1)"
-                },
-                "active":{
-                    "value":"rgba(36, 59, 2, 1)"
-                }
-            },
-            "bonusDefault": {
-                "normal":{
-                    "value": "rgba(250, 98, 87, 1)"
+                    "value": "rgba(244, 250, 219, 1)"
                 },
                 "hover":{
                     "value":"rgba(239, 248, 201, 1)"
                 },
                 "active":{
                     "value":"rgba(236, 246, 192, 1)"
-                } 
+                }
+            },
+            "bonusDefault": {
+                "normal":{
+                    "value": "rgba(250, 98, 87, 1)"
+                }
             },
             "bonusGold": {
                 "normal":{
-                    "value": "rgba(215, 103, 0, 1)"
+                    "value": "rgba(252, 133, 24, 1)"
                 }
             },
             "bonusPlatinum": {
                 "normal":{
-                    "value": "rgba(26, 67, 152, 1)"
+                    "value": "rgba(19, 48, 109, 1)"
                 }
             },
             "dark": {
@@ -191,61 +179,87 @@
         "text": {
             "primary": {
                 "normal": {
-                    "value": "rgba(232, 233, 237, 1)"
-                },
-                "hover": {
-                    "value": "rgba(208, 209, 215, 1)"
-                },
-                "active": {
-                    "value": "rgba(208, 209, 215, 1)"
+                    "value": "rgba(16, 16, 20, 1)"
                 },
                 "disable": {
-                    "value": "rgba(81, 82, 90, 1)"
+                    "value": "rgba(160, 162, 171, 1)"
                 }
             },
             "secondary": {
-                "default": {
-                    "value": "rgba(208, 209, 215, 1)"
+                "normal": {
+                    "value": "rgba(81, 82, 90, 1)"
+                },
+                "disable": {
+                    "value": "rgba(160, 162, 171, 1)"
                 }
             },
             "description": {
-                "default": {
-                    "value": "rgba(181, 182, 192, 1)"
+                "normal": {
+                    "value": "rgba(121, 122, 134, 1)"
+                },
+                "disable": {
+                    "value": "rgba(160, 162, 171, 1)"
                 }
             },
             "placeholder": {
-                "default": {
-                    "value": "rgba(129, 130, 140, 1)"
+                "normal": {
+                    "value": "rgba(160, 162, 171, 1)"
+                },
+                "disable": {
+                    "value": "rgba(160, 162, 171, 1)"
                 }
             },
             "contrast": {
-                "default": {
-                    "value": "rgba(16, 16, 20, 1)"
+                "normal": {
+                    "value": "rgba(255, 255, 255, 1)"
+                },
+                "disable": {
+                    "value": "rgba(255, 255, 255, 0.5)"
                 }
             },
             "accent": {
-                "default": {
-                    "value": "rgba(228, 92, 82, 1)"
+                "normal": {
+                    "value": "rgba(15, 153, 245, 1)"
+                },
+                "hover": {
+                    "value": "rgba(0, 138, 230, 1)"
+                },
+                "active": {
+                    "value": "rgba(0, 122, 204, 1)"
+                },
+                "disable": {
+                    "value": "rgba(160, 162, 171, 1)"
                 }
             },
             "success": {
                 "default": {
-                    "value": "rgba(146, 206, 13, 1)"
+                    "value": "rgba(133, 188, 12, 1)"
                 }
             },
             "info": {
                 "default": {
-                    "value": "rgba(59, 162, 247, 1)"
+                    "value": "rgba(0, 65, 163, 1)"
+                }
+            },
+            "link": {
+                "normal": {
+                    "value": "rgba(0, 65, 163, 1)"
+                },
+                "hover": {
+                    "value": "rgba(0, 138, 230, 1)"
+                },
+                "active": {
+                    "value": "rgba(0, 122, 204, 1)"
                 }
             },
             "warning": {
                 "default": {
-                    "value": "rgba(255, 162, 51, 1)"
+                    "value": "rgba(255, 144, 0, 1)"
                 }
             },
             "danger": {
                 "default": {
-                    "value": "rgba(245, 51, 51, 1)"
+                    "value": "rgba(230, 73, 38, 1)"
                 }
             },
             "staticWhite": {
@@ -254,39 +268,54 @@
                 },
                 "hover": {
                     "value": "rgba(255, 255, 255, 0.75)"
+                },
+                "disable": {
+                    "value": "rgba(160, 162, 171, 1)"
                 }
             }
+            
         },
         "border":{
-            "decorative":{
+            "decorativeLight":{
+                "default":{
+                    "value": "rgba(232, 233, 237, 1)"
+                }
+            },
+            "decorativeDark":{
                 "default":{
                     "value": "rgba(58, 58, 65, 1)"
                 }
             },
             "primary":{
                 "normal":{
-                    "value": "rgba(81, 82, 90, 1)"
+                    "value": "rgba(208, 209, 215, 1)"
                 },
                 "hover":{
-                    "value": "rgba(250, 250, 251, 1)"
+                    "value": "rrgba(0, 138, 230, 1)"
                 },
                 "active":{
-                    "value": "rgba(245, 245, 247, 1)"
+                    "value": "rgba(0, 122, 204, 1)"
                 }
             },
             "accent":{
                 "normal":{
-                    "value": "rgba(228, 92, 82, 1)"
+                    "value": "rgba(15, 153, 245, 1)"
+                },
+                "hover":{
+                    "value": "rgba(0, 138, 230, 1)"
+                },
+                "active":{
+                    "value": "rgba(0, 122, 204, 1)"
                 }
             },
             "success":{
                 "normal":{
-                    "value": "rgba(146, 206, 13, 1)"
+                    "value": "rgba(133, 188, 12, 1)"
                 }
             },
             "danger":{
                 "normal":{
-                    "value": "rgba(245, 51, 51, 1)"
+                    "value": "rgba(230, 73, 38, 1)"
                 }
             },
             "transparent":{
