--- a/style-dictionary/tokens/components/airplaneSeat.json5
+++ b/style-dictionary/tokens/components/airplaneSeat.json5
@@ -27,7 +27,7 @@
                     },
                     "text":{
                         "active":{
-                            "value": "{color.text.contrast.default.value}"
+                            "value": "{color.text.contrast.normal.value}"
                         }
                     }
                 },
@@ -79,7 +79,7 @@
                     },
                     "text":{
                         "active":{
-                            "value": "{color.text.contrast.default.value}"
+                            "value": "{color.text.contrast.normal.value}"
                         }
                     }
                 },
@@ -131,7 +131,7 @@
                     },
                     "text":{
                         "active":{
-                            "value": "{color.text.contrast.default.value}"
+                            "value": "{color.text.contrast.normal.value}"
                         }
                     }
                 },
@@ -183,7 +183,7 @@
                     },
                     "text":{
                         "active":{
-                            "value": "{color.text.contrast.default.value}"
+                            "value": "{color.text.contrast.normal.value}"
                         }
                     }
                 },
@@ -235,7 +235,7 @@
                     },
                     "text":{
                         "active":{
-                            "value": "{color.text.contrast.default.value}"
+                            "value": "{color.text.contrast.normal.value}"
                         }
                     }
                 },
@@ -287,7 +287,7 @@
                     },
                     "text":{
                         "active":{
-                            "value": "{color.text.contrast.default.value}"
+                            "value": "{color.text.contrast.normal.value}"
                         }
                     }
                 },
@@ -339,7 +339,7 @@
                     },
                     "text":{
                         "active":{
-                            "value": "{color.text.contrast.default.value}"
+                            "value": "{color.text.contrast.normal.value}"
                         }
                     }
                 },
@@ -391,7 +391,7 @@
                     },
                     "text":{
                         "active":{
-                            "value": "{color.text.contrast.default.value}"
+                            "value": "{color.text.contrast.normal.value}"
                         }
                     }
                 },
