--- a/package.json
+++ b/package.json
@@ -73,14 +73,14 @@
     "@types/react-portal": "^4.0.2",
     "@types/react-router-dom": "^5.1.7",
     "@types/redux-form": "^7.0.4",
-    "@types/styled-components": "^5.1.7",
+    "@types/styled-components": "5.1.25",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-require-context-hook": "^1.0.0",
-    "babel-plugin-styled-components": "^1.12.0",
+    "babel-plugin-styled-components": "2.0.7",
     "chalk": "^2.1.0",
     "classnames": "~2.2.5",
     "eslint-config-kupibilet": "12.0.3",
@@ -110,7 +110,7 @@
     "redux-logger": "^3.0.6",
     "semver": "^5.4.1",
     "snyk": "^1.173.1",
-    "styled-components": "4.4.0",
+    "styled-components": "5.3.5",
     "typescript": "^4.4.4",
     "versionize": "^1.0.6",
     "whatwg-fetch": "^3.0.0"
@@ -144,6 +144,6 @@
     "react-addons-shallow-compare": "~15.5.2",
     "react-dom": "^15.5.0 || ^16.3.0",
     "react-onclickoutside": "^6.4.0",
-    "styled-components": "4.4.0"
+    "styled-components": "5.3.5"
   }
 }
