--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "build:typescript-types": "tsc --noEmit false --emitDeclarationOnly",
     "watch": "yarn build --watch",
     "snyk": "snyk test --dev --severity-threshold=medium",
+    "tokens": "node ./style-dictionary/config.ts",
     "//": "---        NPM hooks section        ---",
     "postinstall": "move-bin; true",
     "prepublishOnly": "yarn build"
@@ -62,9 +63,9 @@
     "@babel/types": "^7.12.12",
     "@emotion/core": "^10.0.10",
     "@kupibilet/icons": "5.9.2",
-    "@storybook/addon-essentials": "^6.2.9",
-    "@storybook/client-api": "^6.2.9",
-    "@storybook/react": "^6.2.9",
+    "@storybook/addon-essentials": "^6.5.9",
+    "@storybook/client-api": "^6.5.9",
+    "@storybook/react": "^6.5.9",
     "@types/lodash": "^4.14.168",
     "@types/react": "^17.0.0",
     "@types/react-autosuggest": "^10.1.3",
@@ -113,7 +114,8 @@
     "styled-components": "4.4.0",
     "typescript": "^4.4.4",
     "versionize": "^1.0.6",
-    "whatwg-fetch": "^3.0.0"
+    "whatwg-fetch": "^3.0.0",
+    "style-dictionary": "3.0.3"
   },
   "dependencies": {
     "@babel/runtime": "^7.4.5",
