add react responsive media impl

--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "@kupibilet/react-media": "^1.5.1",
     "@popperjs/core": "^2.9.2",
     "@types/classnames": "^2.2.11",
+    "@types/react-responsive": "^8.0.5",
     "memoize-one": "^5.1.1",
     "rc-slider": "^9.7.1",
     "rc-tabs": "^11.7.3",
@@ -127,6 +128,7 @@
     "react-hook-form": "^7.12.2",
     "react-popper": "^2.2.5",
     "react-portal": "^4.1.4",
+    "react-responsive": "8.2.0",
     "react-router-dom": "^5.2.0",
     "react-visibility-sensor": "^4.1.1",
     "rheostat": "^2.1.3",
